--- a/plugin.yml
+++ b/plugin.yml
@@ -1,20 +1,14 @@
-name: UltimateCaptcha
-main: SoyDavs\UltimateCaptcha\Main
+name: Trampoline
 version: 1.0.0
-api: [5.0.0]
-author: SoyDavs
-description: A super secure captcha plugin for PocketMine-MP 5
-
-depends:
-  - FormsUI
-
+main: Trampoline\Main
+api: 5.0.0
+author: "SoyDavs"
+description: "Customizable trampolines for PocketMine-MP"
 commands:
-  captcha:
-    description: "Forces the captcha form to appear again"
-    usage: "/captcha"
-    permission: "ultimatecaptcha.command.captcha"
-
+  trampoline:
+    description: "Main command to manage trampolines"
+    usage: "/trampoline <set|remove|edit|list> [params]"
+    permission: "trampoline.cmd"
 permissions:
-  ultimatecaptcha.command.captcha:
+  trampoline.cmd:
     default: op
-    description: "Allows a player to use the /captcha command"
